Missing values requirements implemented

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,6 +7,7 @@ output:
 
 ```{r setOptions, echo=TRUE}
 ## loading used libs and setting code to globaly appear along the document
+rm(list = ls())
 library(ggplot2)
 library(knitr)
 opts_chunk$set(echo = TRUE)
@@ -23,7 +24,6 @@ knit_hooks$set(inline = function(x) {
 
 if (!("activity.csv" %in% dir())){
   unzip("activity.zip")
-  print("descompactou")
 }
 actData <- read.csv("activity.csv",
                     header = TRUE,
@@ -48,7 +48,7 @@ plot(stepsByDay$Date,
      ylab = "Frequency")
 
 meanSteps <- mean(stepsByDay$Steps, na.rm=TRUE)
-medianSteps <- median(stepsByDay$Steps)
+medianSteps <- median(stepsByDay$Steps, na.rm = TRUE)
 
 ```
 
@@ -78,16 +78,46 @@ The **`r maxAvgStepsInterval`th** 5-minute interval is the interval that, on ave
 
 
 
-## Imputing missing values
+## Inputing missing values
+
+
+The total number of missing values in the dataset is `r sum(is.na(actData$steps))`
+
+Missing values will be filled with the rounded value of the daily average number of steps
+at the corresponding 5-minute interval.
 
 ```{r}
 
-totalNAs <- sum(is.na(actData$steps))
+filledData <- actData
 
+for (i in c(1:length(filledData$steps))){
+  if(is.na(filledData$steps[i])){
+    nRow = i %% 288
+    if (nRow == 0){
+      nRow <- 288
+    }
+    filledData$steps[i] <- round(stepsByInterval$avgSteps[nRow])
+    i <- i + 1
+  }
+}
 
+stepsByDayFil <- aggregate(filledData$steps, by = list(filledData$date), FUN = sum)
+colnames(stepsByDayFil) <- c("Date", "Steps")
 
+plot(stepsByDayFil$Date,
+     stepsByDayFil$Steps,
+     type = "h",
+     lwd=8,
+     main = "Total of Steps per Day after Filling Missing Values",
+     xlab = "Date",
+     ylab = "Frequency")
+
+meanStepsFil <- mean(stepsByDayFil$Steps, na.rm=TRUE)
+medianStepsFil <- median(stepsByDayFil$Steps)
 
 ```
+The mean of the total number of steps per day after filling missing values is **`r meanStepsFil`**.  
+The median of the total number of steps per day after filling missing values is **`r medianStepsFil`**.
 
 
 
