--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -10,6 +10,7 @@ output:
 rm(list = ls())
 library(ggplot2)
 library(knitr)
+library(chron)
 opts_chunk$set(echo = TRUE)
 
 # setting decimal number output
@@ -54,7 +55,7 @@ medianSteps <- median(stepsByDay$Steps, na.rm = TRUE)
 ```
 
 The mean of the total number of steps per day is **`r meanSteps`**.  
-The median of the total number of steps per day is **`r meanSteps`**.
+The median of the total number of steps per day is **`r medianSteps`**.
 
 ## What is the average daily activity pattern?
 
@@ -82,7 +83,7 @@ The **`r maxAvgStepsInterval`th** 5-minute interval is the interval that, on ave
 ## Inputing missing values
 
 
-The total number of missing values in the dataset is `r sum(is.na(actData$steps))`
+The total number of missing values in the dataset is **`r sum(is.na(actData$steps))`**
 
 Missing values will be filled with the rounded value of the daily average number of steps
 at the corresponding 5-minute interval.
@@ -126,16 +127,37 @@ The median of the total number of steps per day after filling missing values is 
 
 ```{r weekDaysEndsPattern}
 
+# creating weekday | weekend factors in filled data set
+filledData$fwDay <- factor(
+  is.weekend(filledData$date),
+  levels = c("FALSE", "TRUE"),
+  labels = c("weekday", "weekend"))
 
-actData$fwDay <- factor(weekdays(actData$date), labels = c("weekday", "weekday", "weekend", "weekend", "weekday", "weekday", "weekday"))
+# spliting filled data set by weekday | weekend factors
+splitted <- split(filledData, filledData$fwDay)
 
-#checking if factoring is ok
-View(data.frame(actData$fwDay, weekdays(actData$date)))
+# calculating average number of steps by interval in weekdays
+stepsByIntervalBus <- aggregate(splitted[1]$weekday$steps, by = list(splitted[1]$weekday$interval), FUN = mean, na.rm = TRUE)
+colnames(stepsByIntervalBus) <- c("interval", "avgSteps")
+# creating column to mark this data set as referencing to weekdays
+stepsByIntervalBus$day <- "weekday"
 
+# calculating average number of steps by interval in weekends
+stepsByIntervalEnd <- aggregate(splitted[2]$weekend$steps, by = list(splitted[2]$weekend$interval), FUN = mean, na.rm = TRUE)
+colnames(stepsByIntervalEnd) <- c("interval", "avgSteps")
+# creating column to mark this data set as referencing to weekends
+stepsByIntervalEnd$day <- "weekend"
+
+# merging calculated data sets again
+stepsByDayWD <- do.call(rbind, list(stepsByIntervalBus, 
+                  stepsByIntervalEnd))
+
+# plotting required graph
+ggplot(stepsByDayWD, aes(interval, avgSteps)) +
+  geom_line() +
+  facet_grid(day ~ .) +
+  labs(x = "Intervals", y = "Average Steps", title = "Average Activity Pattern")
 
 ```
 
-
-
-
-
+  After inputting missing values, we can see that the histogram changes dramatically in the days that there were no readings available. In the other days, which only a few readings were missing, there are only minor changes. Globally the strategy does not alter the data set significantly. A proof of it is that both average and median are almost the same as the original dataset.
