--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -40,17 +40,16 @@ actData <- read.csv("activity.csv",
 stepsByDay <- aggregate(actData$steps, by = list(actData$date), FUN = sum)
 colnames(stepsByDay) <- c("Date", "Steps")
 
-plot(stepsByDay$Date,
-     stepsByDay$Steps,
-     type = "h",
-     lwd=8,
+hist(x = stepsByDay$Steps,
+     breaks = length(stepsByDay$Steps) - 1,
      main = "Total of Steps per Day",
-     xlab = "Date",
+     xlab = "Number of Steps",
      ylab = "Frequency",
      col = "orange")
 
 meanSteps <- mean(stepsByDay$Steps, na.rm=TRUE)
 medianSteps <- median(stepsByDay$Steps, na.rm = TRUE)
+
 
 ```
 
@@ -81,9 +80,12 @@ The **`r maxAvgStepsInterval`th** 5-minute interval is the interval that, on ave
 
 
 ## Inputing missing values
+```{r missingValuesTotal}
+missingValuesTotal <- sum(is.na(actData$steps))
+```
 
 
-The total number of missing values in the dataset is **`r sum(is.na(actData$steps))`**
+The total number of missing values in the dataset is **`r missingValuesTotal`**
 
 Missing values will be filled with the rounded value of the daily average number of steps
 at the corresponding 5-minute interval.
@@ -106,14 +108,12 @@ for (i in c(1:length(filledData$steps))){
 stepsByDayFil <- aggregate(filledData$steps, by = list(filledData$date), FUN = sum)
 colnames(stepsByDayFil) <- c("Date", "Steps")
 
-plot(stepsByDayFil$Date,
-     stepsByDayFil$Steps,
-     type = "h",
-     lwd=8,
+hist(x = stepsByDayFil$Steps,
+     breaks = length(stepsByDayFil$Steps) - 1,
      main = "Total of Steps per Day after Filling Missing Values",
-     xlab = "Date",
+     xlab = "Number of Steps",
      ylab = "Frequency",
-     col = "green")
+     col = "blue")
 
 meanStepsFil <- mean(stepsByDayFil$Steps, na.rm=TRUE)
 medianStepsFil <- median(stepsByDayFil$Steps)
